force-app/zurich-base/main/default/objects/ContactPointAddress/ContactPointAddress.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>