force-app/zurich-base/main/default/objects/ContactPointAddress/fields/CityINECode__c.field-meta.xml
<CustomField>
    <fullName>CityINECode__c</fullName>
    <description>(ZE/OCS) Identifica el código INE de la población en INFO.</description>
    <label>City INE Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>