force-app/zurich-base/main/default/objects/ContactPointAddress/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>(ZE/OCS) Identifica el código de país de la vía de contacto.</description>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>