force-app/zurich-base/main/default/objects/ContactPointAddress/fields/HomeClass__c.field-meta.xml
<CustomField>
    <fullName>HomeClass__c</fullName>
    <description>(ZE/OCS) Identifica la clase de domicilio de la vía de contacto.</description>
    <label>Home Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fiscal</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Personal</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Registro web</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Profesional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>