force-app/zurich-base/main/default/objects/ContactPointAddress/fields/HomeCode__c.field-meta.xml
<CustomField>
    <fullName>HomeCode__c</fullName>
    <description>(ZE/OCS) Identifica el código de domicilio de la vía de contacto.</description>
    <label>Home Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>