force-app/zurich-base/main/default/objects/ContactPointAddress/fields/HomeType__c.field-meta.xml
<CustomField>
    <fullName>HomeType__c</fullName>
    <description>(ZE/OCS) Identifica el tipo de domicilio de la vía de contacto. Aunque la vía se diferencia por el ContactPoint correspondiente, se añade en address para diferenciar los casos:
A        Aptdo. Correos
B        Buzón bancario        
P        Postal</description>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Aptdo. Correos</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Buzón bancario</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Postal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>