force-app/zurich-base/main/default/objects/ContactPointAddress/fields/OtherInfo__c.field-meta.xml
<CustomField>
    <fullName>OtherInfo__c</fullName>
    <description>(ZE/OCS) Identifica la información adicional de la vía de contacto.</description>
    <label>Other Info</label>
    <length>35</length>
    <type>Text</type>
</CustomField>