force-app/zurich-base/main/default/objects/ContactPointAddress/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>(ZE/OCS) Identifica el ámbito a utilizar para la colaboración del registro.</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>