force-app/zurich-base/main/default/objects/ContactPointAddress/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <description>(ZE/OCS) Identifica el número de vía de la vía de contacto.</description>
    <label>Street Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>